--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,17 @@
 }
 
 .App-logo {
+  /*
   animation: App-logo-spin infinite 20s linear;
+  */
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #ffffff;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #222222;
 }
 
 .App-title {
@@ -22,7 +24,9 @@
   font-size: large;
 }
 
+/*
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+*/
