--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,8 @@
 }
 
 .App-logo {
-  /*
-  animation: App-logo-spin infinite 20s linear;
-  */
-  height: 80px;
+  height: 20px;
+  float: left;
 }
 
 .App-header {
@@ -23,10 +21,3 @@
 .App-intro {
   font-size: large;
 }
-
-/*
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-*/
