--- a/src/TextForm.css
+++ b/src/TextForm.css
@@ -1,1 +1,45 @@
+label {
+  display: block;
+}
 
+textarea{
+  /* box-sizing: padding-box; */
+  overflow:hidden;
+  /* demo only: */
+  padding:10px;
+  width: 75%;
+  color: grey;
+  font-size:20px;
+  margin:25px auto;
+  display:block;
+  border-radius:10px;
+}
+
+.textarea value{
+  overflow: hidden;
+  border-right: .15em solid orange; /* The typwriter cursor */
+  animation:
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+
+input[type=submit] {
+    background-color: #a3e2cb;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 16px 24px;
+    text-decoration: none;
+    margin: 8px 2px;
+    cursor: pointer;
+}
